# knowledge-qa

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.bat  start.bat
knowledge_qa/: config.py  loader.py  qa_chain.py  splitter.py  vector_store.py
