[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "knowledge-qa"
version = "1.1.0"
description = "RAG-based local knowledge base Q&A system with Streamlit UI, FAISS vector store, and multi-model LLM support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ZHU123-Develop"},
]
keywords = ["rag", "knowledge-base", "qa", "faiss", "langchain", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: LangChain",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "faiss-cpu>=1.7.4",
    "streamlit>=1.36.0",
    "pdfplumber>=0.11.0",
    "markdown>=3.5",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "fastembed>=0.2.0",
    "numpy<2",
]

[tool.setuptools.packages.find]
include = ["knowledge_qa*"]
